@@ -19,6 +19,7 @@
 %  [ "ar" "\u064a\u0628\u0631\u0639" ]
   [ "ar" "\ufef2\ufe91\ufeae\ufecb" ]
   [ "bn" "Bengali" ]
+  [ "bs" "Bosanski" ]
   [ "bg" "Български" ]
   [ "cs" "Čeština" ]
   [ "cy_GB" "Cymraeg" ]
@@ -32,8 +33,10 @@
   [ "he" "תירבע" ]
   [ "it" "Italiano" ]
   [ "ja" "日本語" ]
+  [ "hi" "Hindi" ]
   [ "hr" "Hrvatski" ]
   [ "hu" "Magyar" ]
+  [ "km" "Khmer" ]
   [ "ko" "한글" ]
   [ "lt" "Lietuvių" ]
   [ "nl" "Nederlands" ]
