@@ -1,4 +1,5 @@
 bn
+bs
 bg
 cs
 cy_GB
@@ -8,10 +9,12 @@ en
 es
 fr
 el
+hi
 hr
 it
 he
 ja
+km
 ko
 lt
 hu
